[package]
name = "pallet-dkg"
version = "0.1.0"
authors = ["Damian Straszak <damian.straszak@cardinals.cc, Michal Swietek <michal.swietek@cardinals.cc>"]
description = "Pallet for generating threshold BLS keys."
edition = "2018"
license = "Apache 2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/Cardinal-Cryptography/substrate/"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
bls12_381 = "0.3.1"
sp-core = { version = "2.0.0", path = "../../primitives/core" }
sp-inherents = { version = "2.0.0", default-features = false, path = "../../primitives/inherents" }
sp-io = { version = "2.0.0", default-features = false, path = "../../primitives/io" }
sp-randomness-beacon= { version = "0.1.0", default-features = false, path = "../../primitives/randomness-beacon" }
sp-authorship = { version = "2.0.0", default-features = false, path = "../../primitives/authorship" }
sp-std = { version = "2.0.0", default-features = false, path = "../../primitives/std" }
sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
frame-support = { version = "2.0.0", default-features = false, path = "../support" }
frame-system = { version = "2.0.0", default-features = false, path = "../system" }
impl-trait-for-tuples = "0.1.3"
lite-json = { version = "0.1", default-features = false }


[dev-dependencies]
sp-io ={ version = "2.0.0", path = "../../primitives/io" }


[features]
default = ["std"]
std = [
	"codec/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"sp-authorship/std",
	"sp-randomness-beacon/std",
]
