[package]
name = "pallet-dkg"
version = "0.1.0"
authors = ["Damian Straszak <damian.straszak@cardinals.cc, Michal Swietek <michal.swietek@cardinals.cc>"]
description = "Pallet for generating threshold BLS keys."
edition = "2018"
license = "Apache 2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/Cardinal-Cryptography/substrate/"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true , features = ["derive"]}
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
sp-io = { version = "2.0.0", default-features = false, path = "../../primitives/io" }
sp-dkg = { version = "0.1.0", default-features = false, path = "../../primitives/dkg" }
sp-std = { version = "2.0.0", default-features = false, path = "../../primitives/std" }
sp-core = { version = "2.0.0", default-features = false, path = "../../primitives/core" }
sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
sp-keystore = { version = "0.8.0", path = "../../primitives/keystore", optional = true }
pallet-session = { version = "2.0.0", default-features = false, path = "../session" }
sp-randomness-beacon= { version = "0.1.0", default-features = false, path = "../../primitives/randomness-beacon" }
frame-support = { version = "2.0.0", default-features = false, path = "../support" }
frame-system = { version = "2.0.0", default-features = false, path = "../system" }


[dev-dependencies]
parking_lot = "0.10.2"
sp-io ={ version = "2.0.0", path = "../../primitives/io" }


[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-io/std",
	"sp-dkg/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-keystore",
	"pallet-session/std",
	"frame-support/std",
	"frame-system/std",
	"sp-randomness-beacon/std",
]
