[package]
name = "pallet-randomness-beacon"
version = "0.1.0"
authors = ["Damian Straszak <damian.straszak@cardinals.cc, Michal Swietek <michal.swietek@cardinals.cc>"]
description = "Pallet for generating unpredictable and unbiased randomness."
edition = "2018"
license = "Apache 2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/Cardinal-Cryptography/substrate/"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
sp-inherents = { version = "2.0.0", default-features = false, path = "../../primitives/inherents" }
sp-randomness-beacon= { version = "0.1.0", default-features = false, path = "../../primitives/randomness-beacon" }
sp-std = { version = "2.0.0", default-features = false, path = "../../primitives/std" }
frame-support = { version = "2.0.0", default-features = false, path = "../support" }
frame-system = { version = "2.0.0", default-features = false, path = "../system" }

[dev-dependencies]
sp-io ={ version = "2.0.0", path = "../../primitives/io" }


[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-system/std",
	"sp-randomness-beacon/std",
]
