[package]
name = "sp-randomness-beacon"
version = "2.0.0"
authors = ["Cardinal Cryptography"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate inherents for randomness beacon."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
sp-inherents = { version = "2.0.0", default-features = false, path = "../inherents" }
sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "2.0.0", default-features = false, path = "../std" }
parking_lot = "0.10.0"
log = "0.4.8"

[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
]
