[package]
name = "sp-randomness-beacon"
version = "0.1.0"
authors = ["Damian Straszak <damian.straszak@cardinals.cc, Michal Swietek <michal.swietek@cardinals.cc>"]
description = "Primitives for randomness beacon."
edition = "2018"
license = "Apache 2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/Cardinal-Cryptography/substrate/"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4.8"
sha3 = "0.8"
parking_lot = "0.10.0"
bls12_381 = "0.3.1"
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
sp-api = { version = "2.0.0", default-features = false, path = "../api" }
sp-std = { version = "2.0.0", default-features = false, path = "../std" }
sp-core = { version = "2.0.0", default-features = false, path = "../core" }
sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
sp-inherents = { version = "2.0.0", default-features = false, path = "../inherents" }
sp-application-crypto = { version = "2.0.0", default-features = false, path = "../application-crypto" }

[dev-dependencies]

[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-core/std",
	"sp-application-crypto/std",
	"sp-runtime/std",
	"sp-api/std",
	"sp-std/std",
]
